--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^3.1.0
   geolocator: ^8.2.1
   go_router: ^13.2.1
+  localstorage: ^4.0.1+4
 
 dev_dependencies:
   flutter_test:
