--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   geolocator: ^8.2.1
   go_router: ^13.2.1
   localstorage: ^4.0.1+4
+  mocktail: ^1.0.3
+  bloc_test: ^9.1.6
 
 dev_dependencies:
   flutter_test:
